	* tools/mksyscall.c:  Add a tool that will auto-generate syscall proxies
	  and stubs from a comma-separated-value (CSV) data file.
	* arch/arm/src/cortexm3/mpu.h: Add a header file describing the Cortex-M3
	  MPU registers.
	* Numerous modifications to the build system.  Various people have reported
	  build problems since the re-organization and release of NuttX-6.0.  I am
	  unable to replicate the build problems in my environment, but the changes
	  have be incorporated in hope of correcting the build issues in other
	  environments.
	* drivers/i2c/st_lis331dl.c:  I2C-based driver for the LIS331DL MEMS
	  motion sensor.  Contributed by Uros Platise.
	* Makefile: The NuttX build system  will now supported building NuttX as two
	  separately linked images: (1) a kernel-mode RTOS image, and (2) a user-
	  mode application image that communicates to the RTOS kernel via system
	  calls.  A lot more still must be done.
	* user_initialize(): Eliminated the user_initialize() initialization hook.
	  It is difficult to maintain and redundant:  Board level initialization
	  an up_initialize() provide the same kind of capability.
	* arch/*/include/*/type.h: On some compilers, char defaults as unsigned.
	  Explicitly add signed to integer types if signed is what is required.
	* arch/*: For all architectures -- Global register state save structure
	  (usually called current_regs) should be marked volatile; Added general
	  capability to support nested interrupts (not fully realized for all
	  architectures).
	* sched/task_create.c: Add support for starting kernel-mode thread.
	* drivers/usbdev/usbdev_serial.c: Fix reported by Sheref Younan.  USB
	  was being reset after serial driver was closed.  As a result, you could
	  no reopen the serial driver.
	* configs/lpcxpresso-lpc1768: Add a board configuration for the Embedded
	  Artists LPCXpresso LPC1768 board.

6.2 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>


